<resources>
    <string name="app_name">MisurApp</string>
    <!--Sensors category -->
    <string name="environmentalSensors">Environmental Sensors</string>
    <string name="positionSensors">Position Sensors</string>
    <string name="motionSensors">Motion Sensors</string>
    <!-- Messages for not supported sensors -->
    <string name="withoutLightSensor">Light Sensor not found</string>
    <string name="withoutProximitySensor">Proximity Sensor not found</string>
    <string name="withoutHumiditySensor">Humidity Sensor not found</string>
    <string name="withoutGeomagneticFieldSensor">Geomagnetic Field Sensor not found</string>
    <string name="withoutAccelerometerSensor">Accelerometer Sensor not found</string>
    <string name="withoutStepCounterSensor">Step Counter Sensor not found</string>
    <string name="withoutPressureSensor">Pressure Sensor not found</string>
    <string name="withoutTemperatureSensor">Temperature Sensor not found</string>

    <!--Sensors name -->
    <string name="lightSensor">Light Sensor</string>
    <string name="humiditySensor">Humidity Sensor</string>
    <string name="proximitySensor">Proximity Sensor</string>
    <string name="accelerometerSensor">Accelerometer Sensor</string>
    <string name="stepCounterSensor">Step Counter Sensor</string>
    <string name="geomagneticFieldSensor">Geomagnetic Sensor</string>
    <string name="pressureSensor">Pressure Sensor</string>
    <string name="temperatureSensor">Temperature Sensor</string>

    <!--Description about using sensors -->
    <string name="lightDescription">Change the lightness to darken policeman\'s sunglasses</string>
    <string name="accelerometerDescription">Shake your device vertically to launch the rocket, horizontally to change the rotation</string>
    <string name="geomagneticDescription">Use your device to find North-Pole on your yatch</string>
    <string name="proximityDescription">Move your hand near the device to give the five</string>
    <string name="stepCounterDescription">Walk to make the biker move along the street</string>
    <string name="showHistory">Show History</string>
    <plurals name="saveMessage">
        <item quantity="one">%d Detection saved</item>
        <item quantity="other">%d Detections saved</item>
    </plurals>
    <plurals name="numberSteps">
        <item quantity="one">%d step</item>
        <item quantity="other">%d steps</item>
    </plurals>

</resources>
