<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtGeomagneticSensor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnvironmentActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardGeomagnetic"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="153dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageGeomagneticSensors"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginBottom="531dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_geomagnetic_sensor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/my_toolbar"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtGeomagneticSensors"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/geomagneticFieldSensor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtGeomagneticDescription"
                    style="@style/cardText"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/geomagneticDescription"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProximity"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="153dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageProximitySensors"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginBottom="531dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_geomagnetic_sensor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/my_toolbar"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtProximitySensors"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/proximitySensor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtProximityDescription"
                    style="@style/cardText"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/proximityDescription"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>