<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardEnvironment"
            app:cardElevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/environmental_sensors_foreground"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="153dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <ImageView
            android:id="@+id/imageEnvironmentalSensors"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginBottom="531dp"
            android:src="@mipmap/environmental_sensors_foreground"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/my_toolbar"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtEnvironmentalSensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            style="@style/cardText"
            android:text="@string/environmentalSensors"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPosition"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/environmental_sensors_foreground"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="153dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imagePositionSensors"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginBottom="531dp"
                android:src="@mipmap/position_sensors_foreground"
                android:scaleType="centerCrop"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/my_toolbar"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtPositionSensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                style="@style/cardText"
                android:text="@string/positionSensors"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMotion"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/environmental_sensors_foreground"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="153dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageMotionSensors"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginBottom="531dp"
                android:src="@mipmap/motion_sensors_foreground"
                android:scaleType="centerCrop"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/my_toolbar"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtMotionSensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                style="@style/cardText"
                android:text="@string/motionSensors"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>

